--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-﻿node_modules/
+﻿# Dependencies
+node_modules/
+# Vercel
 .vercel/
-.DS_Store
-.env
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
