--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "diagnostico-ia-ciclismo",
   "version": "1.0.0",
   "private": true,
-  "license": "MIT",
-  "scripts": {
-    "dev": "npx serve public -l 5173"
-  },
+  "type": "module",
   "dependencies": {
     "resend": "^4.0.0"
+  },
+  "scripts": {
+    "start": "npx serve -s public"
   }
 }
